# SMI-Code-Checker

./: .gitignore  AnalysisResult.cpp  AnalysisResult.h  CMakeLists.txt  README.md  ReportGenerator.cpp  ReportGenerator.h  SourceCodeFile.cpp  SourceCodeFile.h  StaticAnalysisTools.cpp  StaticAnalysisTools.h  Vulnerability.cpp  Vulnerability.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  projectpage.cpp  projectpage.h  projectpage.ui  report.cpp  report.h  report.ui
